fix panel closing tag and spacing

--- a/Assets/css/cursor.css
+++ b/Assets/css/cursor.css
@@ -97,6 +97,7 @@ body {
   height: 60px;
   position: relative;
   border-radius: 20px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
